src/graph/graph.h

// forward declaration of Graph struct
typedef struct Graph Graph;
// typedef for synchronization function pointer
typedef bool (*SyncMatrixFunc)(const Graph *, Delta_Matrix, GrB_Index, GrB_Index);
struct Graph {
	int reserved_node_count;           // number of nodes not commited yet
	DataBlock *nodes;                  // graph nodes stored in blocks
	DataBlock *edges;                  // graph edges stored in blocks
	Delta_Matrix adjacency_matrix;     // adjacency matrix, holds all graph connections
	Delta_Matrix *labels;              // label matrices
	Delta_Matrix node_labels;          // mapping of all node IDs to all labels possessed by each node
	Tensor *relations;                 // relation matrices
	Delta_Matrix _zero_matrix;         // zero matrix
	SyncMatrixFunc SynchronizeMatrix;  // function pointer to matrix synchronization routine
	GraphStatistics stats;             // graph related statistics

	Delta_Matrix *_labels;             // pending label matrices
	Tensor *_relations;                // pending relation matrices
	pthread_t writer_tid ;             // writer thread id
};
// adds a label from the graph
void Graph_RemoveLabel
(
	Graph *g,
	LabelID label_id
);
// removes a relation from the graph
void Graph_RemoveRelation
(
	Graph *g,
	int relation_id
);
// create a single node and labels it accordingly.
// Return newly created node.
void Graph_CreateNode
(
	Graph *g,         // graph
	Node *n,          // node to create
	LabelID *labels,  // node's labels
	uint label_count  // number of labels
);
// label node with each label in 'lbls'
void Graph_LabelNode
(
	Graph *g,       // graph to operate on
	NodeID id,      // node ID to update
	LabelID *lbls,  // set to labels to associate with node
	uint lbl_count  // number of labels
);
// dissociates each label in 'lbls' from given node
void Graph_RemoveNodeLabels
(
	Graph *g,       // graph to operate against
	NodeID id,      // node ID to update
	LabelID *lbls,  // set of labels to remove
	uint lbl_count  // number of labels to remove
);
// connects source node to destination node
void Graph_CreateEdge
(
	Graph *g,      // graph on which to operate
	NodeID src,    // source node ID
	NodeID dest,   // destination node ID
	RelationID r,  // edge type
	Edge *e        // [output] created edge
);
// deletes nodes from the graph
void Graph_DeleteNodes
(
	Graph *g,            // graph to delete nodes from
	Node *nodes,         // nodes to delete
	uint64_t node_count  // number of nodes
);
// deletes edges from the graph
void Graph_DeleteEdges
(
	Graph *g,      // graph to delete edges from
	Edge *edges,   // edges to delete
	uint64_t n,    // number of edges
	bool implicit  // edge deleted due to node deletion
);