src/graph/graphcontext.h

typedef struct GraphContext GraphContext;
// get graph from graph context
Graph *GraphContext_GetGraph
(
	const GraphContext *gc
);
// removes the schema at index 'id', frees it, and removes its backing
// matrix from the graph
//
// after removal the schema array is compacted: every schema with index > id
// shifts down by one
// callers must invalidate any cached schema IDs
//
// the schema's version must equal the current write version — only schemas
// introduced within the current write transaction may be removed
// this ensures committed schemas remain stable from concurrent readers
void GraphContext_RemoveSchema
(
	GraphContext *gc,  // graph context
	int id,            // schema ID to remove
	SchemaType t       // SCHEMA_NODE or SCHEMA_EDGE
);
// removes an attribute from the graph
void GraphContext_RemoveAttribute
(
	GraphContext *gc,
	AttributeID id
);
// remove and free an index
int GraphContext_DeleteIndex
(
	GraphContext *gc,
	SchemaType schema_type,
	const char *label,
	const char *field,
	IndexFieldType t
);
// remove a single node from all indices that refer to it
void GraphContext_DeleteNodeFromIndices
(
	GraphContext *gc,  // graph context
	Node *n,           // node to remove from index
	LabelID *labels,   // [optional] node labels to remove from index
	uint label_count   // [optional] number of labels
);
// remove a single edge from all indices that refer to it
void GraphContext_DeleteEdgeFromIndices
(
	GraphContext *gc,  // graph context
	Edge *e            // edge to remove from index
);
// add node to any relevant index
void GraphContext_AddNodeToIndices
(
	GraphContext *gc,  // graph context
	Node *n            // node to add to index
);
// add edge to any relevant index
void GraphContext_AddEdgeToIndices
(
	GraphContext *gc,  // graph context
	Edge *e            // edge to add to index
);